[fix] corrigindo o uso de socio ao invez de user, atualizando mapper e persistencia